hphp/hack/test/typecheck/new_inference/inout_invariant.php.like_types.exp
File "inout_invariant.php", line 9, characters 17-17:
Invalid argument (Typing[4110])
File "inout_invariant.php", line 9, characters 17-17:
Expected T
File "inout_invariant.php", line 9, characters 17-17:
But got dynamic because it is an unenforceable type
File "inout_invariant.php", line 9, characters 23-23:
Invalid argument (Typing[4110])
File "inout_invariant.php", line 9, characters 23-23:
Expected T
File "inout_invariant.php", line 9, characters 23-23:
But got dynamic because it is an unenforceable type
